harness/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-react-app
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: example-react-app
  template:
    metadata:
      labels:
        app: example-react-app
    spec:
      containers:
      - image: hassansaab/example-ci-cd-app:31
        name: example-ci-cd-app
        ports:
        - containerPort: 80
