harness/k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-react-app
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: example-react-app
