harness/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-react-app
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: example-react-app
          servicePort: 80
